--- a/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
+++ b/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
@@ -1,25 +1,30 @@
+\lfoot{Autor: Raphael Simsek}
 \subsection{Analyse und Verbesserung des Fahrstils}
-Leider kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen oder wünschenswerten Fahrstil näher bringen, da dies oft auch ein andauernder Prozess ist. Zu diesem Zweck wurde sich darüber Gedanken gemacht wie man diese Situation verbessern kann.
-\subsubsection{Ist-Zustand}
-Vor der Antragstellung wurde überlegt, ob es bereits bekannte Systeme, um nachhaltig seinen Fahrstil zu verbessern, gibt. Es wurde dabei herausgefunden dass es bereits in vielen anderen Bereichen Apps gibt, welche sich das \textit{Sharing}-Prinzip zu nutze gemacht haben und so äußerst bekannt geworden sind. Eine der bekanntesten österreichischen Beispiele ist das, stetig erweiterte, App-System von Runtastic. \cite{Businessplan.Runtastic}
+
+Leider kann nicht immer der Fahrlehrer einem Fahrschüler einen nachhaltigen oder wünschenswerten Fahrstil näher bringen, da dies oft auch ein andauernder Prozess ist. \comment{MELD:Rephrase} Zu diesem Zweck wurde sich darüber Gedanken gemacht wie man diese Situation verbessern kann.
+
+\comment{MELD:Ich weiß was du ausdrücken willst aber der Paragraph ist schlecht formuliert} Vor der Antragstellung wurde überlegt, ob es bereits bekannte Systeme, um nachhaltig seinen Fahrstil zu verbessern, gibt. Es wurde dabei herausgefunden dass es bereits in vielen anderen Bereichen Apps gibt, welche sich das \textit{Sharing}-Prinzip zu nutze gemacht haben und so äußerst bekannt geworden sind. Eine der bekanntesten österreichischen Beispiele ist das, stetig erweiterte, App-System von Runtastic. \cite{Businessplan.Runtastic}
 Nur im Bezug auf das Autofahren konnte in diese Richtung nichts lokalisiert werden.
-\newline
+
+\comment{MELD:Was hat das alles konkret mit Analyse und Verbesserung des Fahrstiles zu tun?}
 Zu Beginn des Diplomprojektes gab es also keine Möglichkeiten für verbesserungswillige Autofahrer ihren Fahrstil zu verbessern und dies dann sogar zu teilen. 
-Dies hat unsere Marktumfeldanalyse ergeben, wobei uns besonders auffiel, dass eine Analyse-Funktion für die nachhaltige Verbesserung des Fahrstils nötig wäre. Es wurde für diese Analyse evaluiert, welche Funktionalitäten am wichtigsten sind, wobei diese auch innerhalb der Diplomarbeit realisierbar sein sollten.
-\subsubsection{Was ließe sich verbessern?}
-Der bisherige Schaltvorschlag in einem Auto ist, insbesondere bei niedrigpreis Fahrzeugen, oft äußerst primitiv gehalten, wobei ab einer gewissen Drehzahl die darauf folgende Gänge vorgeschlagen werden oder nur auf den Normzyklus optimiert wird. \cite{Schaltempfehlung} Der Wirkungsgrad nach dem Carnot-Prozess, wird dabei aber kaum verwendet. \cite{Carnot.Wirkungsgrad}
+Dies hat unsere Marktumfeldanalyse ergeben, wobei uns besonders auffiel, dass eine Analyse-Funktion für die nachhaltige Verbesserung des Fahrstils nötig wäre. Es wurde für diese Analyse evaluiert, welche Funktionalitäten am wichtigsten sind, wobei diese auch innerhalb der Diplomarbeit realisierbar sein sollten. 
 \newline
-\newline
+
+
+\textbf{Was ließe sich verbessern?} \comment{MELD:Muss kein extra chapter sein}
+
+Der bisherige Schaltvorschlag in einem Auto ist, insbesondere bei niedrigpreis Fahrzeugen, oft äußerst primitiv gehalten, wobei ab einer gewissen Drehzahl die darauf folgende Gänge vorgeschlagen werden oder nur auf den Normzyklus optimiert wird. \cite{Schaltempfehlung} Der Wirkungsgrad nach dem Carnot-Prozess, wird dabei aber kaum verwendet. \cite{Carnot.Wirkungsgrad} \comment{MELD:Was ist der Carnot-Prozess? Verweis}
+
 Eine Analyse des Fahrstils, nach Parametern der Fahrgastbequemlichkeit, ist gar nur bei Sportwagen und Fahrzeugen, die für den Rennbetrieb gedacht sind, verbaut. Hierbei ist anzumerken, dass bei derartigen Fahrzeugen die Funktionalität nicht für das frühzeitige Verbessern des Fahrstils eines Fahrers verwendet wird, sondern für die Optimierung von Rundenzeiten auf einer Rennstrecke oder schier für das Ausreizen des Möglichen.
-\newline
-\newline
+
 Eine Live-Messung von CO2 Werten während der Fahrt ist momentan eine Schätzung, welche durch die Fahrzeughersteller aufgrund der OBD-II Daten durchgeführt und bei sehr wenigen Modellen als Zusatz angezeigt wird. Echte Grenzwerte oder gar eine Analysefunktionalität gibt es in dieser Hinsicht aber nicht.
-\newline
-\newline
-Weil aber besonders Fahranfänger und Fahrer, die große Acht auf die Umwelt legen, eben genannte Analysefunktionalität möglicherweise gerne nutzen würden, wurde ebenfalls evaluiert ob es diese Möglichkeiten bereits gibt.
-Bei der Evaluierung wurde ein hardware-seitig sehr ähnliches Projekt entdeckt, welches die gelieferten Daten allerdings nicht auf einer Android\textregistered App verarbeitet, sondern eher als Logger dienen soll.\cite{LowBudget.CarPC} 
-\newline
+
+Weil aber besonders Fahranfänger und Fahrer die eben genannte Analysefunktionalität möglicherweise gerne nutzen würden, wurde ebenfalls evaluiert ob es diese Möglichkeiten bereits gibt.
+Bei der Evaluierung wurde ein hardware-seitig sehr ähnliches Projekt entdeckt, welches die gelieferten Daten allerdings nicht auf einer Android App verarbeitet, sondern eher als Logger dienen soll.\cite{LowBudget.CarPC} \comment{MELD:Iclude Sister-Project?}
+
 Zusätzlich dazu wäre dieser Car-PC alleine im Bezug auf seine Hardware weitaus teurer als durch dieses Projekt angedacht. Es war aber durchaus möglich in der Definitionsphase des Projektes einige Anpassungen zu treffen, da schon schlussgefolgert werden konnte was im Bereich des möglichen liegt. 
-\newline
-\newline
+
 Die Möglichkeit einer Analyse konnte aber bei der Evaluierung bei keinem der konkurrierenden Echtzeit-Anzeigen (wie. z.B. Torque Pro \cite{Torque.Pro}) erkannt werden. Gerade diese Funktionalität würde aber von Fahranfängern benötigt werden um frühzeitig und selbstständig Fehler in ihrem Fahrstil erkennen und ausbessern zu können. Somit könnten diese sich diese schlechten Angewohnheiten nicht im motorischen Gedächtnis verankern, sondern es würden sich nur positive Eigenschaften gemerkt werden. Dies ist insbesondere für die Lernkurve bei einem noch ungeübten Kraftfahrzeug-Lenker von großem Vorteil, da diese oft auch noch nach dem Erhalt des Führerscheins unsicher bezüglich ihres Fahrstils sind und viele kleinere Fehler begehen. Insbesondere konnten wir, unter anderem anhand unserer eigener Erfahrung, feststellen, dass das gleichmäßige Fahren, das verbrauchsarme Fahren und das Schalten für viele Fahranfänger eine Herausforderung darstellt.
+
+\clearpage % DO NOT REMOVE
