--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/obd2.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/obd2.tex
@@ -1,11 +1,14 @@
+\lfoot{Autor: Raphael Simsek}
 \subsubsection{OBD II}
-\paragraph{Defintion}
-Die OBD-II Schnittstelle ist eine normierte, standardisierte Schnittstelle, welche, mittels einem passenden Auslesegerät, Zugriff auf die Daten des Motormanagements verschafft. Diese Schnittstelle hat unterschiedliche Versionen, welche auf die verschiedenen Kontinente aufgeschlüsselt wurden. 
-\paragraph{Standardisierung}
-Es gibt also OBD II, was Initial eine Schnittstelle der vereinigten Staaten war, weshalb der Standard auch in Nordamerika seit 1996 verbaut wurde. Zusätzlich gibt es EOBD, womit die europäische Umsetzung des OBD II Standards beschrieben wird.\cite{Directive.98/69/EC.EUParliament} Der wesentliche Unterschied ist dabei die Standardisierung, welche zwar technisch zwischen SAE J1962 und ISO/DIS 15031 gleich ist, aber trotzdem unterschiedlich benannt wurde. \cite{SAE.J1962} Ferner gab es eine australische \cite{AU.Motor.Vehicle.Standards.Act.1989} und eine japanische Version der Standardisierung.
-\paragraph{Charakterisierung}
-Ausserdem gibt es eine, ebenfalls in der Standardisierung festgehalten einen OBD II A und B Konnektor. Der A Konnektor ist für alle Fahrzeuge mit 12 V Bordspannung und hat die Form eines D mit einer Nut in der Mitte, um die Pins zu behausen. Der B Konnektor verwendet ebenfalls die Form eines D's, allerdings ist dieser Konnektor für Fahrzeuge mit 24V Bordspannung, was häufig Lastkraftfahrzeuge sind. Bei diesem Konnektor ist die Nut in der Mitte unterbrochen, um es unmöglich zu machen einen männlichen Konnektor des A-Typs einzustecken. Dieser Konnektor könnte  nämlich aufgrund von Überspannung defekt werden. Es ist also der B Konnektor sowohl mit A und B kompatibel, allerdings ist der A Konnektor nur mit seinesgleichen verwendbar.
 
+\textbf{Defintion\nextline}
+Die OBD-II Schnittstelle ist eine normierte, standardisierte Schnittstelle, welche, mittels einem passenden Auslesegerät, Zugriff auf die Daten des Motormanagements verschafft. Diese Schnittstelle hat unterschiedliche Versionen, welche auf die verschiedenen Kontinente aufgeschlüsselt wurden. 
+
+\textbf{Standardisierung\nextline}
+Es gibt also OBD II, was Initial eine Schnittstelle der vereinigten Staaten war, weshalb der Standard auch in Nordamerika seit 1996 verbaut wurde. Zusätzlich gibt es EOBD, womit die europäische Umsetzung des OBD II Standards beschrieben wird.\cite{Directive.98/69/EC.EUParliament} Der wesentliche Unterschied ist dabei die Standardisierung, welche zwar technisch zwischen SAE J1962 und ISO/DIS 15031 gleich ist, aber trotzdem unterschiedlich benannt wurde. \cite{SAE.J1962} Ferner gab es eine australische \cite{AU.Motor.Vehicle.Standards.Act.1989} und eine japanische Version der Standardisierung.
+
+\textbf{Charakterisierung\nextline}
+Ausserdem gibt es eine, ebenfalls in der Standardisierung festgehalten einen OBD II A und B Konnektor. Der A Konnektor ist für alle Fahrzeuge mit 12 V Bordspannung und hat die Form eines D mit einer Nut in der Mitte, um die Pins zu behausen. Der B Konnektor verwendet ebenfalls die Form eines D's, allerdings ist dieser Konnektor für Fahrzeuge mit 24V Bordspannung, was häufig Lastkraftfahrzeuge sind. Bei diesem Konnektor ist die Nut in der Mitte unterbrochen, um es unmöglich zu machen einen männlichen Konnektor des A-Typs einzustecken. Dieser Konnektor könnte  nämlich aufgrund von Überspannung defekt werden. Es ist also der B Konnektor sowohl mit A und B kompatibel, allerdings ist der A Konnektor nur mit seinesgleichen verwendbar.
 
 \begin{figure}[!htb]\centering
    \begin{minipage}{0.49\textwidth}
@@ -18,9 +21,11 @@ Ausserdem gibt es eine, ebenfalls in der Standardisierung festgehalten einen OBD
    \end{minipage}
 \end{figure}
 
-\paragraph{Positionierung / Lokalisierung}
+
+\textbf{Positionierung / Lokalisierung\nextline}
 Die OBD II Schnittstelle muss bei allen PKW mit Benzinmotor ab 2001 und bei allen PKW mit Dieselmotor ab 2004 im Sichtfeld des Fahrers verbaut sein. Aus diesem Grund wird die OBD II Schnittstelle von gängigen Automobilherstellern oft Fahrerseitig im Bereich der Pedale, im Bereich der Mittelkonsole oder links neben dem Lenkrad montiert. Vor allem Fahrzeuge des VW-Konzerns integrieren Ihre OBD-II Schnittstelle auch im Sicherungskasten. Um besser zu veranschaulichen wo die OBD II Schnittstelle zumeist zu finden ist, wurde untersucht wo sich diese bei den verkaufsstärksten Produkten der verschiedenen Fahrzeugkategorien befindet.
-\subparagraph{Kompaktklasse: Volkswagen Golf}
+
+\textbf{Kompaktklasse: Volkswagen Golf}
 Exemplarisch können Sie hier die Lokalisierung der OBD II Schnittstelle an einem Golf VI erkennen. Diese Schnittstelle ist hier unterhalb einer werkzeuglos entfernbaren Abdeckung versteckt, welche nur abgezogen werden muss. Wie auf dem Foto erkennbar ist die Schnittstelle hier im Fußraum der Fahrerseite, links der Pedale. 
 
 \begin{figure}[!htb]\centering
@@ -28,7 +33,7 @@ Exemplarisch können Sie hier die Lokalisierung der OBD II Schnittstelle an eine
 	\caption{OBD II Konnektor bei einem Golf VI \cite{Golf.OBD}}\label{Fig:Data3}
 \end{figure}
 
-\subparagraph{Kleinwagen: Volkswagen Polo}
+\textbf{Kleinwagen: Volkswagen Polo}
 Erwartungsgemäß befindet sich der OBD Konnektor bei einem Fahrzeug des selben Herstellers an einer sehr ähnlichen Position. Ebenfalls ist die Schnittstelle also im Fußraum des Fahrers links neben den Pedalen zu finden.
 
 \begin{figure}[!htb]\centering
@@ -36,7 +41,7 @@ Erwartungsgemäß befindet sich der OBD Konnektor bei einem Fahrzeug des selben 
 	\caption{OBD II Konnektor bei einem Polo IV (Typ 9N3) \cite{Polo.OBD}}\label{Fig:Data3}
 \end{figure}
 
-\subparagraph{Mittelklasse: BMW 3er}
+\textbf{Mittelklasse: BMW 3er}
 Bei einem BMW 3er E90 ist der OBD Konnektor auf der linken Fußraumverkleidung der Fahrerseite zu finden. Es wurde unter einer kleinen Abdeckung, welche sogar betitelt ist mit OBD ist verdeckt. Die OBD Schnittstelle ist hier vertikal angeordnet, wie sie auf dem angeführten Bild sehen können.
 
 \begin{figure}[!htb]\centering
@@ -44,4 +49,4 @@ Bei einem BMW 3er E90 ist der OBD Konnektor auf der linken Fußraumverkleidung d
 	\caption{OBD II Konnektor bei einem BMW 3er E90 \cite{3er.OBD}}\label{Fig:Data3}
 \end{figure}
 
-\newpage
+\clearpage % DO NOT REMOVE
