--- a/diplomarbeit/sources.bib
+++ b/diplomarbeit/sources.bib
@@ -1,63 +1,67 @@
-@misc{OMG.2014,
+% Examples:     MELD.TECHNISCHEGRUNDLAGEN-WEBAPP.DjangoReleases
+%               SIMR.IMPLEMENTIERUNG-SCHALTVORSCHLAG.WirkungsgradGrafik
+% 
+% Zu beachten: Kammelcase bei Description, Chapter-Section sind ausgeschrieben
+%
+@misc{AUTOR.CHAPTER-SECTION.Desc, 
 	author = {OMG},
 	year = {2014},
-	title = {{About the Object Management Group}},
+	title = {About the Object Management Group},
 	howpublished = "\url{http://www.omg.org/gettingstarted/gettingstartedindex.htm}",
 	note = {Accessed on 05.10.2014}
 }
 
 @conference{Carnot.Wirkungsgrad,
-        author = {Prof. Dr. Karl-Heiz Kampert},
-        booktitle = {Kreisprozesse},
-        organisation = {Universität Wuppertal},
-        title = {Kreisprozesse},
-        year = {2013}
+    author = {Prof. Dr. Karl-Heiz Kampert},
+    booktitle = {Kreisprozesse},
+    organisation = {Universität Wuppertal},
+    title = {Kreisprozesse},
+    year = {2013}
 }
 
 @misc{LowBudget.CarPC,
-        title = {Low Budget CarPC},
-        howpublished="\url{http://mechlab-engineering.de/references/low-budget-car-pc/
-		}",
-        year = {2014},
-        note = {Accessed on 20.03.2016}
+    title = {Low Budget CarPC},
+    howpublished="\url{http://mechlab-engineering.de/references/low-budget-car-pc/}",
+    year = {2014},
+    note = {Accessed on 20.03.2016}
 }
-        
+    
 @techreport{Businessplan.Runtastic,
-        title={Businessplan Runtastic},
-        institution={Runtastic GmbH},
-        year={2009},
-        author={Florian Gschwandtner, MSc}
+    title={Businessplan Runtastic},
+    institution={Runtastic GmbH},
+    year={2009},
+    author={Florian Gschwandtner, MSc}
 }
 
 @misc{SAE.J1962,
-		title={SAE J1962},
-		year={1992-2015},
-		publisher={SAE International},
-		howpublished="\url{http://standards.sae.org/j1962_201207/}",
-		note={Accessed on 20.03.2016}
+    title={SAE J1962},
+    year={1992-2015},
+    publisher={SAE International},
+    howpublished="\url{http://standards.sae.org/j1962_201207/}",
+    note={Accessed on 20.03.2016}
 }
 
 @misc{AU.Motor.Vehicle.Standards.Act.1989,
-		title={Vehicle Standard (Australian Design Rule 79/01 — Emission Control for Light Vehicles) 2005},
-		year={2005},
-		publisher={Australian Government},
-		howpublished="\url{https://www.legislation.gov.au/Details/F2008C00323}",
-		note={Accessed on 20.03.2016}
+    title={Vehicle Standard (Australian Design Rule 79/01 — Emission Control for Light Vehicles) 2005},
+    year={2005},
+    publisher={Australian Government},
+    howpublished="\url{https://www.legislation.gov.au/Details/F2008C00323}",
+    note={Accessed on 20.03.2016}
 }
 
 @misc{Directive.98/69/EC.EUParliament,
-		title={Directive 98/69/EC of the European Parliament and of the Council of 13 October 1998 relating to measures to be taken against air pollution by emissions from motor vehicles and amending Council Directive 70/220/EEC},
-		year={2000},
-		publisher={European Parliament},
-		howpublished="\url{http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:31998L0069:EN:HTML}",
-		note={Accessed on 20.03.2016}
+    title={Directive 98/69/EC of the European Parliament and of the Council of 13 October 1998 relating to measures to be taken against air pollution by emissions from motor vehicles and amending Council Directive 70/220/EEC},
+    year={2000},
+    publisher={European Parliament},
+    howpublished="\url{http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:31998L0069:EN:HTML}",
+    note={Accessed on 20.03.2016}
 }
 
 @misc{OBDII.TypeA,
-    author = {{SAE International}},
+    author = {SAE International},
     title = {OBD II Typ A Masszeichnung},
     year = {1992},
-    note = {[Online; accessed 22.03.2016]},
+    note = {Online; accessed 22.03.2016},
     howpublished="\url{http://www.obdtester.com/images/j1962f_type_a.gif}"
 }
 
@@ -73,7 +77,7 @@
     author = {{Auto Zeitung}},
     title = {Sprit Sparen, Schaltempfehlung 10. Paragraph},
     year = {2015},
-    note = {[Online; accessed 22.03.2016]},
+    note = {Online; accessed 22.03.2016},
     howpublished="\url{http://www.autozeitung.de/tipps-tricks/sprit-sparen-autofahren}"
 }
 
@@ -81,30 +85,30 @@
     author = {{Ian Hawkins}},
     title = {Torque Pro (OBD2 / Auto)},
     year = {2016},
-    note = {[Online; accessed 22.03.2016]},
+    note = {Online; accessed 22.03.2016},
     howpublished="\url{http://torque-bhp.com}"
 }
 
 @misc{Golf.OBD,
-	author = {{National Center for Automotive Science & Technology at Weber State University}},
-	title = {Golf VI OBD Position},
-	year = {unknown},
-	note = {[Online; accessed 22.03.2016]},
+    author = {{National Center for Automotive Science \& Technology at Weber State University}},
+    title = {Golf VI OBD Position},
+    year = {unknown},
+    note = {Online; accessed 22.03.2016},
     howpublished="\url{http://www.obdclearinghouse.com/OBD-CH/documents/newdocuments/volkswagen/golf/2002.jpg}"
 }
 
 @misc{Polo.OBD,
-	author = {{Copyright: Arturo R Montesinos, Flickr User}},
-	title = {Polo IV 9N3 OBD Position},
-	year = {2011},
-	note = {[Online; accessed 22.03.2016]},
+    author = {{Arturo R Montesinos}},
+    title = {Polo IV 9N3 OBD Position},
+    year = {2011},
+    note = {Online; accessed 22.03.2016},
     howpublished="\url{https://www.flickr.com/photos/armk/5578899043}"
 }
 
 @misc{3er.OBD,
-	author = {{Copyright: Matt Shannahan (tahoerdr), Photobucket User}},
-	title = {BMW 3er E90 OBD Position},
-	year = {unknown},
-	note = {[Online; accessed 22.03.2016]},
+    author = {{Matt Shannahan (tahoerdr)}},
+    title = {BMW 3er E90 OBD Position},
+    year = {unknown},
+    note = {Online; accessed 22.03.2016},
     howpublished="\url{http://i8.photobucket.com/albums/a47/tahoerdr/E90Post/MattShannahanIDDocs006.jpg}"
 }
