--- a/diplomarbeit/sections/ch1_introduction/projekt-management.tex
+++ b/diplomarbeit/sections/ch1_introduction/projekt-management.tex
@@ -1,3 +1,4 @@
+\lfoot{Autor: Hüseyin Bozkurt}
 \subsection{Projekt Management}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -19,3 +20,5 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat.
+
+\clearpage % DO NOT REMOVE
