--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
@@ -1,5 +1,5 @@
-\lfoot{Autor: Fitim Faiku}
-\subsection{Das Projekt BestShift}
+\lfoot{Autor: Raphael Simek}
+\subsubsection{Thermodynamik}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -7,5 +7,6 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
 
 \clearpage % DO NOT REMOVE
