--- a/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/dbms.tex
@@ -1,5 +1,5 @@
-\lfoot{Autor: Fitim Faiku}
-\subsection{Das Projekt BestShift}
+\lfoot{Autor: Daniel Melichar}
+\subsubsection{Datenbankmanagementsysteme}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
