--- a/diplomarbeit/sections/ch3_implementierung/carpc.tex
+++ b/diplomarbeit/sections/ch3_implementierung/carpc.tex
@@ -1,5 +1,5 @@
-\lfoot{Autor: Fitim Faiku}
-\subsection{Das Projekt BestShift}
+\lfoot{Autor: Tobias Perny}
+\subsection{Car-PC}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
