--- a/diplomarbeit/sections/ch5_conclusio_outlook/outlook.tex
+++ b/diplomarbeit/sections/ch5_conclusio_outlook/outlook.tex
@@ -1,5 +1,5 @@
-\lfoot{Autor: Fitim Faiku}
-\subsection{Das Projekt BestShift}
+\lfoot{Autor: Who?}
+\subsection{Outlook und Verbesserungsmöglichkeiten}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
