--- a/diplomarbeit/document.tex
+++ b/diplomarbeit/document.tex
@@ -53,6 +53,8 @@
 \input{sections/ch4_wirtschaftlichkeit/main.tex}
 \input{sections/ch5_conclusio_outlook/main.tex}
 
+% Reset Autor
+\lfoot{}
 
 % BIBL
 \clearpage
