Worked on Abstract/Kurzfassung

--- a/diplomarbeit/abstract.tex
+++ b/diplomarbeit/abstract.tex
@@ -1,17 +1,18 @@
 \section*{Kurzfassung}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Die Zielsetzung des Projekt BestShift, entwickelt von Schülern der Abteilung für Informationstechnologie am TGM, ist die Sammlung, Analyse und Verwendung von Daten die relevant für KFZ-Fahrer sind. Durch die zwei Datenquellen, das Auto selber, mit welchem durch den Diagnostikport kommuniziert wird, und der selbst entwickelte Car-PC, werden passende Darstellungen geboten die zeigen wie gut ein Fahrer fährt.
+
+Durch die modulare Umsetzung des Car-PCs kann zu jedem Zeitpunkt ein neuer Sensor hinzugefügt werden. Zusätzlich dazu dient der Car-PC als ein Medium der Zwischenspeicherung und Erst-Verarbeitung der relevanten Information für die späteren Anwendungen durch die Applikationen.
+
+Präzise, einfach zu verstehende Darstellung und Features die den Fahrstil verbessern können, sind mittels zwei Applikation entwickelt worden, wobei diese für unterschiedliche Szenarien konzipiert sind. Die erste Applikation ist entwickelt worden für Smartphone - spezifisch für die Android Plattform. Die Android Applikation sammelt die benötigten Daten direkt vom Car-PC und kann somit beinahe Echtzeit-Darstellung erzeugen. Die Android-App ist außerdem für das hochladen der Sensordaten auf den BestShift Server zuständig.
+
+\todo
 
 \section*{Abstract}
+The Project BestShift, developed by students from the department of information technology at the TGM, has the main goals of extracting, analysing and processing data relevant for drivers of automoviles. Through the two main data sources, the car itself (interfaced through the diagnostics port) as well as the self-developed Car-PC, an accurate representation of how well a driver is driving can be given.
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+A modular approach has been chosen for the Car-PC – which means that at any given moment a new sensor can be added and a wider spectrum of representable data is given. The Car-PC additionally serves as a secondary data hub, as the information, provided through the OBD-II, is also stored on it. It is actually not necessary to use all the data provided by the car, hence the Car-PC also filters out the relevant data for the visualisations in our applications.
+
+To give accurate representations of the data as well as giving features that can enhance a driver’s style of driving, BestShift has provided two applications for different scenarios. One being a smartphone application, developed for the Android platform. The Android Application collects the data from the Car-PC directly and is thereby able to give almost real-time graphics with little to no delay. It is also responsible for pushing the sensor data onto the BestShift Servers where the second application – the Web-Application – can further use it. The Web-Application’s focus lies within a wider area. It primarily serves the purpose of saving all car trips by a driver. A driver can use the Web-Application to retrospectively view all of his trips and compare them to other driver’s trips. With Web-App’s included Social Media integration, the driver can even boast about how good of a driver he is amongst his friends.
+
+BestShift’s three main features, realized in both Applications, are a gear-shift-recommendation, an analysis of how comfortable the drive is, as well as a fuel consumption analysis. However, through a combination of the features, one can very easily determinate if a driver’s driving style is environmentally friendly.
