--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -1,11 +1,45 @@
 \lfoot{Autor: Hüseyin Bozkurt}
-\subsection{Umweltbelastung durch CO2 Ausstoß}
+\subsection{Umweltbelastung durch CO_{2} Ausstoß}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+\textbf{Was ist CO_{2}?}
+CO_{2} wird umgangssprachlich Kohlenstoffdioxid genannt und ist die zusammmensetzung aus einem Kohlenstoff-Atom und zwei Sauerstoff-Atomen. 
+Die charkteristischen Eigenschaften von CO_{2} sind Unsichtbarkeit und Geruchslosigkeit. 
+In jedem Stoffwechselprozess spielt Kohlenstoffdioxid eine wichtige Rolle, da beispielsweise der Mensch CO_{2} ausatmet. 
+Bei vielen Energiegewinnungsverfahren werden durch Verbrennung Energien freigesetzt, die als Nebenprodukt Kohlenstoff produzieren. 
+In der freien Luft werden diese Kohlenstoffpartikel zu CO_{2}. 
+CO_{2} ist Reaktionsträge und besitzt keine giftige Eigenschaft. 
+Das Problem mit den Unmengen an ausgestoßenem CO_{2} ist, dass sein massives Vorkommen die Atmosphäre beschädigt.
+
+\textbf{Wie entsteht CO_{2}?}
+Alle Fahrzeuge, die Kraftstoffe als Energiequelle nutzen 
+(wie zum Beispiel Diesel, Flüssiggas, Benzin und auch Biotreibstoff), erzeugen Kohlenstoff als Abgas. 
+Indem der Motor den Kraftstoff zusammen mit Luftsauerstoff verbrennt, gelangt das CO_{2} über die Abgasanlage in die Atmosphäre. 
+Eine effektive Methode zur beseitigung der Kohlenstoffpartikel gibt es zurzeit nicht. 
+Der benutzte Kraftstoff bestimmt, wie viel CO_{2} bei der Verbrennung erzeugt wird. 
+Beispielsweise entsteht bei der Verbrennung von einem Liter Diesel mehr Kohlenstoffdioxid, als bei einem Liter Benzin.
+Der Kraftstoffverbrauch eines Wagens und sein CO_{2}-Output stehen daher in enger Verbindung. 
+Demnach existieren Werte, die man als Grenze für den Verbrauch festlegen kann. 
+Heutzutage spricht man von der Einheit gramm pro kilometer als normierte Verbrauchsmessung.
+Der Lenker eines PKW hat natürlicherweise Einfluss auf seinen CO_{2}-Ausstoß. 
+Dieses Umweltbewusstsein wollen wir im Rahmen dieser Diplomarbeit weitervererben, indem wir den Benutzerinnen und Benutzern 
+von BestShift Tipps zum sparsamen und umweltschonenden Fahren geben.
+
+\textbf{Ökologische Hintergründe (Treibhauseffekt)}
+Kohlenstoffdioxid ist ein sogenanntes Abfallprodukt, welches bei Verbrennungsprozessen zur Energiegewinnung entsteht. 
+CO_{2} gilt als Vorreiter der Treibhausgase.
+Die negative Umweltauswirkung, welche zustande kommt indem Unmengen an CO_{2} in die Atmosphäre gelangen, 
+nennt sich Treibhauseffekt. 
+Der Treibhauseffekt ist eine der Hauptursachen für den Klimawandel, welches drastische Folgen für Natur, Tiere und Menschen hat. 
+Zu viel CO_{2} in der Atmosphäre bringt unter anderem das Abschmelzen von Gletschern, 
+dem Anstieg der Meerestemperatur, dem Anstieg der Meeresspiegel, 
+Aussterben von Pflanzen und Tiere und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc.
+
+\textbf{Das Kyoto-Protokoll}
+Im Rahmen des Kyoto-Protokolls haben sich viele westliche Staaten zu einer Reduktion der Treibhausgase verpflichtet. 
+Dieses Protokoll war der Startschuss für die Suche nach erneuerbaren Energien. 
+Anfang 2015 sind gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/CO2 pro kilometer  limitierten. 
+Bis 2020 soll dieses Limit auf 95g/CO2 pro kilometer runtergesetzt werden.
+
+
 
 \clearpage % DO NOT REMOVE
