--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -2,11 +2,11 @@
 \subsection{Umweltbelastung durch CO_{2} Ausstoß}
 
 \textbf{Was ist CO_{2}?}
-CO_{2} wird umgangssprachlich Kohlenstoffdioxid genannt und ist die zusammmensetzung aus einem Kohlenstoff-Atom und zwei Sauerstoff-Atomen. 
+CO_{2} wird umgangssprachlich Kohlenstoffdioxid genannt und ist die zusammengesetzt aus einem Kohlenstoff-Atom und zwei Sauerstoff-Atomen. 
 Die charkteristischen Eigenschaften von CO_{2} sind Unsichtbarkeit und Geruchslosigkeit. 
 In jedem Stoffwechselprozess spielt Kohlenstoffdioxid eine wichtige Rolle, da beispielsweise der Mensch CO_{2} ausatmet. 
 Bei vielen Energiegewinnungsverfahren werden durch Verbrennung Energien freigesetzt, die als Nebenprodukt Kohlenstoff produzieren. 
-In der freien Luft werden diese Kohlenstoffpartikel zu CO_{2}. 
+In der freien Luft werden diese Kohlenstoffpartikel zu CO_{2}. \comment{SIMR: Durch Frischluft werden diese Kohlenstoffpartikel zu CO_{2}. Was dir halt besser gefällt}
 CO_{2} ist Reaktionsträge und besitzt keine giftige Eigenschaft. 
 Das Problem mit den Unmengen an ausgestoßenem CO_{2} ist, dass sein massives Vorkommen die Atmosphäre beschädigt.
 
@@ -14,12 +14,12 @@ Das Problem mit den Unmengen an ausgestoßenem CO_{2} ist, dass sein massives Vo
 Alle Fahrzeuge, die Kraftstoffe als Energiequelle nutzen 
 (wie zum Beispiel Diesel, Flüssiggas, Benzin und auch Biotreibstoff), erzeugen Kohlenstoff als Abgas. 
 Indem der Motor den Kraftstoff zusammen mit Luftsauerstoff verbrennt, gelangt das CO_{2} über die Abgasanlage in die Atmosphäre. 
-Eine effektive Methode zur beseitigung der Kohlenstoffpartikel gibt es zurzeit nicht. 
-Der benutzte Kraftstoff bestimmt, wie viel CO_{2} bei der Verbrennung erzeugt wird. 
+Eine effektive Methode zur Beseitigung der Kohlenstoffpartikel gibt es zurzeit nicht. 
+Der benutzte Kraftstoff bestimmt, wie viel CO_{2} bei der Verbrennung erzeugt wird. \comment{SIMR: statt erzeugt wird - als Nebenprodukt entsteht?}
 Beispielsweise entsteht bei der Verbrennung von einem Liter Diesel mehr Kohlenstoffdioxid, als bei einem Liter Benzin.
-Der Kraftstoffverbrauch eines Wagens und sein CO_{2}-Output stehen daher in enger Verbindung. 
+Der Kraftstoffverbrauch eines Wagens und sein CO_{2}-Output stehen daher in enger Verbindung. \comment{SIMR: Kraftfahrzeug statt Wagen? Wagen könnte als Pferdekutsche missverstanden werden.}
 Demnach existieren Werte, die man als Grenze für den Verbrauch festlegen kann. 
-Heutzutage spricht man von der Einheit gramm pro kilometer als normierte Verbrauchsmessung.
+Heutzutage spricht man von der Einheit Gramm pro Kilometer [g/km] als normierte Verbrauchsmessung.
 Der Lenker eines PKW hat natürlicherweise Einfluss auf seinen CO_{2}-Ausstoß. 
 Dieses Umweltbewusstsein wollen wir im Rahmen dieser Diplomarbeit weitervererben, indem wir den Benutzerinnen und Benutzern 
 von BestShift Tipps zum sparsamen und umweltschonenden Fahren geben.
@@ -29,16 +29,16 @@ Kohlenstoffdioxid ist ein sogenanntes Abfallprodukt, welches bei Verbrennungspro
 CO_{2} gilt als Vorreiter der Treibhausgase.
 Die negative Umweltauswirkung, welche zustande kommt indem Unmengen an CO_{2} in die Atmosphäre gelangen, 
 nennt sich Treibhauseffekt. 
-Der Treibhauseffekt ist eine der Hauptursachen für den Klimawandel, welches drastische Folgen für Natur, Tiere und Menschen hat. 
+Der Treibhauseffekt ist eine der Hauptursachen für den Klimawandel, welcher drastische Folgen für Natur, Tiere und Menschen hat. 
 Zu viel CO_{2} in der Atmosphäre bringt unter anderem das Abschmelzen von Gletschern, 
-dem Anstieg der Meerestemperatur, dem Anstieg der Meeresspiegel, 
-Aussterben von Pflanzen und Tiere und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc.
+den Anstieg der Meerestemperatur, den Anstieg des Meeresspiegels, 
+Aussterben von Pflanzen und Tieren und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc. \comment{SIMR: Den Satz würd ich zweiteilen. Einmal Natur Folgen (steigender Meeressspiegel,...) und dann Fauna Folgen (warme Winter,...)}
 
 \textbf{Das Kyoto-Protokoll}
 Im Rahmen des Kyoto-Protokolls haben sich viele westliche Staaten zu einer Reduktion der Treibhausgase verpflichtet. 
 Dieses Protokoll war der Startschuss für die Suche nach erneuerbaren Energien. 
-Anfang 2015 sind gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/CO2 pro kilometer  limitierten. 
-Bis 2020 soll dieses Limit auf 95g/CO2 pro kilometer runtergesetzt werden.
+Anfang 2015 sind Gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/CO_{2} pro kilometer limitierten. 
+Bis 2020 soll dieses Limit auf 95g/CO2 pro Kilometer herunter gesetzt werden.
 
 
 
