--- a/diplomarbeit/sections/ch1_introduction/projekt-management.tex
+++ b/diplomarbeit/sections/ch1_introduction/projekt-management.tex
@@ -1,24 +1,42 @@
 \lfoot{Autor: Hüseyin Bozkurt}
 \subsection{Projekt Management}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Da BestShift keiner konkreten Angabe unterlag,
+mussten wir uns auf Änderungen im letzten Moment gefasst machen. Das Team 
+durfte über den Umfang des Projektes selbst entscheiden.
+immer größer. Aufgrunddessen haben wir uns auf eine agile Projektmanagementmethode fixiert. 
+Wir haben uns für SCRUM entschieden, da es Zielführendes Arbeiten unterstützt und die inkrementelle Entwicklung
+von Software ermöglicht. Ausserdem ist Transparenz ein sehr wichtiger Punkt, da unser PL immer auf dem neuesten
+Stand sein muss. Diese Transparenz ermöglicht es, Schwachstellen aufzudecken und ist für die produktivität von SCRUM bekannt.
+Gezieltes Risikomanagement kann durch SCRUM ebenfalls betrieben werden. 
 
 
 \subsubsection{SCRUM}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat.
+Unter agilem Projektmanagement, insbesondere Scrum, gibt es den sogenannten
+Sprint; ein zeitlich Begrenzter Arbeitsaufwand. Ein Spirnt wird logischerweise
+im Vorhinein geplant, wobei man Wert auf den ¨scope of work¨(zu erledigende
+Arbeitspakete) legt. Zusätzlich dazu, gibt es zum Beginn einer jeden
+Arbeitsphase ein kleines Meeting (Daily Scrum Meeting). In diesem Meeting
+erklärt jedes Mitglied was es in der letzten Arbeitsphase gearbeitet hat, was es in
+dieser Arbeitsphase tun wird und welche Probleme es beim Arbeiten gegeben
+hat.
+Anders als bei der traditionellen Variante hat Scrum den großen Vorteil das neue
+User Stories, und damit euch neue Funktionen der Software, on-the-go hinzugefügt
+werden können. Grundsätzlich kann man sagen, dass Scrum Sinnvoll ist,
+wenn man mögliche Veränderungen anstrebt.
 
-\subsubsection{Artifakte und Sprints}
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat.
+\subsubsection{Artefakte und Sprints}
+Das Diplomprojekt BestShift wurde von Anfang an in 5 Sprints aufgeteilt, welche pünktlich
+von PL abgenommen wurden.
+Sprint 01 18.Nov 2015 - 09.Dez 2015
+Sprint 02 09.Dez 2015 - 13.Jan 2016
+Sprint 03 13.Jan 2016 - 10.Feb 2016
+Sprint 04 10.Feb 2016 - 02.März 2016
+Sprint 05 02.März 2016 - 14.März 2016
+
+Diese Sprints wurden durch die sogenannten Abnahmeprotokolle verifiziert.
+Zu jedem Sprint gab es ebenfalls Sprintdokumentationen, die umschrieben was konkret 
+während des Sprints passiert ist.
+
 
 \clearpage % DO NOT REMOVE
