--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -1,40 +1,22 @@
 \lfoot{Autor: Hüseyin Bozkurt}
-\subsection{Umweltbelastung durch CO_{2} Ausstoß}
+\subsection{Umweltbelastung durch \ce{CO2} Ausstoß}
 
-\textbf{Was ist CO_{2}?}
-CO_{2} wird umgangssprachlich Kohlenstoffdioxid genannt und ist die zusammmensetzung aus einem Kohlenstoff-Atom und zwei Sauerstoff-Atomen. 
-Die charkteristischen Eigenschaften von CO_{2} sind Unsichtbarkeit und Geruchslosigkeit. 
-In jedem Stoffwechselprozess spielt Kohlenstoffdioxid eine wichtige Rolle, da beispielsweise der Mensch CO_{2} ausatmet. 
-Bei vielen Energiegewinnungsverfahren werden durch Verbrennung Energien freigesetzt, die als Nebenprodukt Kohlenstoff produzieren. 
-In der freien Luft werden diese Kohlenstoffpartikel zu CO_{2}. 
-CO_{2} ist Reaktionsträge und besitzt keine giftige Eigenschaft. 
-Das Problem mit den Unmengen an ausgestoßenem CO_{2} ist, dass sein massives Vorkommen die Atmosphäre beschädigt.
+\textbf{Definition und Enstehung\nextline}
+Kohlenstoffdioxid ist die zusammmensetzung aus einem Kohlenstoff-Atom und zwei Sauerstoff-Atomen. Die charkteristischen Eigenschaften von \ce{CO2} sind Unsichtbarkeit und Geruchslosigkeit. In jedem Stoffwechselprozess spielt Kohlenstoffdioxid eine wichtige Rolle; beispielsweise atmet der Mensch das Dioxid aus. Bei vielen Energiegewinnungsverfahren werden durch Verbrennung Energien freigesetzt, die als Nebenprodukt Kohlenstoff produzieren. In der freien Luft werden diese Kohlenstoffpartikel zu \ce{CO2}, wobei das Dioxid nur ein Reaktionsträger ist und an sich keine giftige Eigenschaft besitzt. Das Problem mit den Unmengen an ausgestoßenem Schadstoffen ist, dass sein massives Vorkommen die Atmosphäre beschädigt.
 
-\textbf{Wie entsteht CO_{2}?}
-Alle Fahrzeuge, die Kraftstoffe als Energiequelle nutzen 
-(wie zum Beispiel Diesel, Flüssiggas, Benzin und auch Biotreibstoff), erzeugen Kohlenstoff als Abgas. 
-Indem der Motor den Kraftstoff zusammen mit Luftsauerstoff verbrennt, gelangt das CO_{2} über die Abgasanlage in die Atmosphäre. 
-Eine effektive Methode zur beseitigung der Kohlenstoffpartikel gibt es zurzeit nicht. 
-Der benutzte Kraftstoff bestimmt, wie viel CO_{2} bei der Verbrennung erzeugt wird. 
-Beispielsweise entsteht bei der Verbrennung von einem Liter Diesel mehr Kohlenstoffdioxid, als bei einem Liter Benzin.
-Der Kraftstoffverbrauch eines Wagens und sein CO_{2}-Output stehen daher in enger Verbindung. 
-Demnach existieren Werte, die man als Grenze für den Verbrauch festlegen kann. 
-Heutzutage spricht man von der Einheit gramm pro kilometer als normierte Verbrauchsmessung.
-Der Lenker eines PKW hat natürlicherweise Einfluss auf seinen CO_{2}-Ausstoß. 
-Dieses Umweltbewusstsein wollen wir im Rahmen dieser Diplomarbeit weitervererben, indem wir den Benutzerinnen und Benutzern 
-von BestShift Tipps zum sparsamen und umweltschonenden Fahren geben.
+Alle Fahrzeuge, die Kraftstoffe als Energiequelle nutzen, wie zum Beispiel Diesel, Flüssiggas, Benzin und auch Biotreibstoff, erzeugen Kohlenstoff als Abgas. Indem der Motor den Kraftstoff zusammen mit Luftsauerstoff verbrennt, gelangt das \ce{CO2} über die Abgasanlage in die Atmosphäre. Eine effektive Methode zur beseitigung der Kohlenstoffpartikel gibt es zurzeit nicht. Der benutzte Kraftstoff bestimmt, wie viel \ce{CO2} bei der Verbrennung erzeugt wird. Beispielsweise entsteht bei der Verbrennung von einem Liter Diesel mehr Kohlenstoffdioxid, als bei einem Liter Benzin.Der Kraftstoffverbrauch eines Wagens und sein \ce{CO2}-Output stehen daher in enger Verbindung. Demnach existieren Werte, die man als Grenze für den Verbrauch festlegen kann. Heutzutage spricht man von der Einheit gramm pro kilometer als normierte Verbrauchsmessung.Der Lenker eines PKW hat natürlicherweise Einfluss auf seinen \ce{CO2}-Ausstoß. Dieses Umweltbewusstsein wollen wir im Rahmen dieser Diplomarbeit weitervererben, indem wir den Benutzerinnen und Benutzern von BestShift Tipps zum sparsamen und umweltschonenden Fahren geben.
 
-\textbf{Ökologische Hintergründe (Treibhauseffekt)}
+\textbf{Ökologische Hintergründe (Treibhauseffekt)\nextline}
 Kohlenstoffdioxid ist ein sogenanntes Abfallprodukt, welches bei Verbrennungsprozessen zur Energiegewinnung entsteht. 
-CO_{2} gilt als Vorreiter der Treibhausgase.
-Die negative Umweltauswirkung, welche zustande kommt indem Unmengen an CO_{2} in die Atmosphäre gelangen, 
+\ce{CO2} gilt als Vorreiter der Treibhausgase.
+Die negative Umweltauswirkung, welche zustande kommt indem Unmengen an \ce{CO2} in die Atmosphäre gelangen, 
 nennt sich Treibhauseffekt. 
 Der Treibhauseffekt ist eine der Hauptursachen für den Klimawandel, welches drastische Folgen für Natur, Tiere und Menschen hat. 
-Zu viel CO_{2} in der Atmosphäre bringt unter anderem das Abschmelzen von Gletschern, 
+Zu viel \ce{CO2} in der Atmosphäre bringt unter anderem das Abschmelzen von Gletschern, 
 dem Anstieg der Meerestemperatur, dem Anstieg der Meeresspiegel, 
 Aussterben von Pflanzen und Tiere und Wetterphänomene wie zum Beispiel sehr warme Winter, Stürme etc.
 
-\textbf{Das Kyoto-Protokoll}
+\textbf{Das Kyoto-Protokoll\nextline}
 Im Rahmen des Kyoto-Protokolls haben sich viele westliche Staaten zu einer Reduktion der Treibhausgase verpflichtet. 
 Dieses Protokoll war der Startschuss für die Suche nach erneuerbaren Energien. 
 Anfang 2015 sind gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/CO2 pro kilometer  limitierten. 
