--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/device-compability.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/device-compability.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Who?}
 \subsubsection{Kompatible Geräte}
+\label{subsec:device-compability}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
