--- a/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/sql-nosql.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/sql-nosql.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Daniel Melichar}
 \subsubsection{Relationale und nicht relationale Datenbanken}
+\label{subsec:sql-nosql}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
