--- a/diplomarbeit/special/preamble.tex
+++ b/diplomarbeit/special/preamble.tex
@@ -23,6 +23,7 @@
 \usepackage{filecontents}
 \usepackage{glossaries}
 \usepackage{titlesec}
+\usepackage{mhchem}
 \usepackage[headsep=1cm,headheight=3cm,hmargin=2cm,vmargin=2.5cm]{geometry}
 \usepackage[nolist]{acronym}
 \usepackage[toc,page]{appendix}
