--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Fitim Faiku}
 \subsubsection{Schadstoffausstoss}
+\label{subsec:schadstoffausstoss}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
