--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Raphael Simek}
 \subsubsection{Thermodynamik}
+\label{subsec:thermodynamik}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
