--- a/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/sensoren.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/hardware-sensorik/sensoren.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Tobias Perny}
 \subsubsection{Sensoren}
+\label{subsec:sensoren}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
