--- a/diplomarbeit/sections/ch2_technische_grundlagen/web-dev/design.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/web-dev/design.tex
@@ -1,5 +1,6 @@
 \lfoot{Autor: Who?}
 \subsubsection{User Interface und User Experience}
+\label{subsec:design}
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
