Hi Fitim :sun_with_face:

--- a/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
+++ b/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
@@ -8,4 +8,31 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
+Da die bewertung der einzelnen Fahrer durch den Fahrgast erfogt ist jedem klar.
+Diese Bewertung fÃ€llt meistens aus den Faktoren wie stark ein Fahrer beschleunigt und in welcher Geschwindigkeit er um eine Kurve fÃ€hrt.
+Um einen KFZ-Einsteiger mit mÃ¶glichst Informativen Daten zu \"bewerten\" habe ich mir einen Kammschen Kreis als Hilfe genommen.
+
+\subsubsection{Kammscher Kreis }
+Ein Kammsher Kreis ist ein ein Kreis in dem durch Polarkoordinaten die Extremwerte einer Fahrt eingezeichnet sind.
+Der Kreis ist so aufebaut, dass in der positiven y-Achse alle BremskrÃ€fte eingezeichnet werden, negative y-Achse fÃŒrs beschleunigen,
+negative x-Achse alle rechts Kurven, positiven x-Achse alle Linkskurven.
+Es ist also ales verkehrt.
+
+\subsubsection{Implementierung}
+Um diesen Kammschen Kreis richtig darzustellen habe ich mir die Klasse canvas als Hilfe genommen, wobei die von Graphics erbt.
+Mittels Canvas konnte ich zufÃ€llig generierte 0-360grad Winkel und Radien erstellen und die dann in Polarkoordinaten umrechnen.
+Somit konnte ich alle generierten werte Darstellen. 
+
+public int runden(float roh){
+	float anzahl= round(roh/5);
+	System.out.println("Gerundet:" + anzahl);
+	int returnzahl=0;
+	returnzahl= (int) (anzahl*5);
+	return returnzahl;
+}
+
+Bei der Methode Runden nehme ich alle Winkel auf und Runde sie auf oder ab in 5er Schritten.
+
+
+
 \clearpage % DO NOT REMOVE
