Added Java Code support

--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -9,8 +9,8 @@ Alle Fahrzeuge, die Kraftstoffe als Energiequelle nutzen, wie zum Beispiel Diese
 \textbf{Das Kyoto-Protokoll\nextline}
 Im Rahmen des Kyoto-Protokolls haben sich viele westliche Staaten zu einer Reduktion der Treibhausgase verpflichtet. 
 Dieses Protokoll war der Startschuss für die Suche nach erneuerbaren Energien. 
-Anfang 2015 sind Gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/CO_{2} pro kilometer limitierten. 
-Bis 2020 soll dieses Limit auf 95g/CO2 pro Kilometer herunter gesetzt werden.
+Anfang 2015 sind Gesetzesregelungen in Kraft getreten, die den Durchschnittsverbrauch eines PKW auf 130g/\ce{CO2} pro kilometer limitierten. 
+Bis 2020 soll dieses Limit auf 95g/\ce{CO2} pro Kilometer herunter gesetzt werden.
 
 
 
